@@ -1,0 +1,1 @@
+$('.js-broadcast-message-preview').html("#{j(render_broadcast_message(@message))}");
