@@ -19,7 +19,7 @@ class Spinach::Features::AdminBroadcastMessages < Spinach::FeatureSteps
   end
 
   step 'submit form with new customized broadcast message' do
-    fill_in 'broadcast_message_message', with: 'Application update from 4:00 CST to 5:00 CST'
+    fill_in 'broadcast_message_message', with: 'Application update from **4:00 CST to 5:00 CST**'
     fill_in 'broadcast_message_color', with: '#f2dede'
     fill_in 'broadcast_message_font', with: '#b94a48'
     select Date.today.next_year.year, from: "broadcast_message_ends_at_1i"
@@ -28,6 +28,7 @@ class Spinach::Features::AdminBroadcastMessages < Spinach::FeatureSteps
 
   step 'I should see a customized broadcast message' do
     expect(page).to have_content 'Application update from 4:00 CST to 5:00 CST'
+    expect(page).to have_selector 'strong', text: '4:00 CST to 5:00 CST'
     expect(page).to have_selector %(div[style="background-color: #f2dede; color: #b94a48"])
   end
 
@@ -50,5 +51,16 @@ class Spinach::Features::AdminBroadcastMessages < Spinach::FeatureSteps
 
   step 'I should not see the removed broadcast message' do
     expect(page).not_to have_content 'Migration to new server'
+  end
+
+  step 'I enter a broadcast message with Markdown' do
+    fill_in 'broadcast_message_message', with: "Live **Markdown** previews. :tada:"
+  end
+
+  step 'I should see a live preview of the rendered broadcast message' do
+    page.within('.broadcast-message-preview') do
+      expect(page).to have_selector('strong', text: 'Markdown')
+      expect(page).to have_selector('img.emoji')
+    end
   end
 end
